# TaskManager

./: CMakeLists.txt  README.md  TaskManager.desktop  install.sh
include/: calendardelegate.h  database.h  mainwindow.h  task.h  template.h  todo.h
src/: database.cpp  main.cpp  mainwindow.cpp
